syntax = "proto3";

option csharp_namespace = "ProductApi";

package product;

service Product {
	rpc GetProduct (ProductRequest) returns (NullableResponse);
}

message ProductRequest {
	int32 id = 1;
}

message ProductReply { 
	string name = 1;
	string price = 2;
}

message NullableResponse
{
    ProductReply result = 1;
}